Postpone bookmark and current page updates on backend errors
