# src/BymseRead.Core/Application/UpdateCurrentPage/UpdateCurrentPageRequest.cs
@@ -3,5 +3,5 @@ namespace BymseRead.Core.Application.UpdateCurrentPage;
 public class UpdateCurrentPageRequest
 {
     public required int Page { get; init; }
-    public required DateTimeOffset ChangedAt { get; init; }
+    public required DateTimeOffset CreatedAt { get; init; }
 }
